--- a/HOC/package.json
+++ b/HOC/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-query",
+  "name": "hoc",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-loading-indicators": "^1.0.0",
-    "react-query": "^3.39.3"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
